Introduced slow and high speeds for Ghost and Player. Slow when eating pills/when scared.

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,6 @@
 
 Add bonus factory : Creates beer bottles/beer glass/wine glass
 
-Animation when finished the level
-
 Move to next level when complete
 
 Slow scared ghosts down
@@ -13,15 +11,19 @@ Slow Player when eating pills
 Later
 -----
 
+Leave lipstick marks when kissing (End of level animation).
+
 Animation for Player and Ghosts
 	Ghost outline wobbles
 	Eyes as separate entities
 		Different poses for left/right/up/down
 		Jiggle around a little.
 
+Resize window based on the size of the maze
+
 Splash screen
 
-Highscore
+Highscore (saved)
 
 Scrolling view for a HUGE maze.
 
