--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,13 @@
 
+
+Bugs
+----
+
+Ghosts misaligning when speed not a multiple of grid size.
+
+Next
+----
+
 Add bonus factory : Creates beer bottles/beer glass/wine glass
 
 Move to next level when complete
